@@ -14,7 +14,6 @@ TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
 
 # cross-tools are installed
 ####OTHERTARGETS = i586-mingw32msvc i386-unknown-linux2.5
-OTHERTARGETS = i586-mingw32msvc
 
 # for backward compatibility
 # FC6 uses --hash-style=gnu by default
